fix shell error